--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,19 @@
 {
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Django: Runserver",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/octofit-tracker/backend/manage.py",
+            "args": ["runserver", "0.0.0.0:8000"],
+            "django": true,
+            "console": "integratedTerminal",
+            "justMyCode": true
+        }
+    ]
+}
+{
   "version": "0.2.0",
   "configurations": [
     {
